@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.deccandelight" name="Deccan Delight" version="0.3.4" provider-name="gujal">
+<addon id="plugin.video.deccandelight" name="Deccan Delight" version="0.3.5" provider-name="gujal">
     <requires>
         <import addon="xbmc.python" version="2.20.0"/>
         <import addon="script.module.urlresolver" version="1.0.0"/>
@@ -14,9 +14,11 @@
         <provides>video</provides>
     </extension>
     <extension point="xbmc.addon.metadata">
-        <summary>Entertainment from the Deccan region of India</summary>
-        <description>This addon provides access to entertainment in various Deccan languages such as Tamil, Telugu, Malayalam, Kannada, and Hindi</description>
+        <summary lang="en_gb">Entertainment from the Deccan region of India</summary>
+        <description lang="en_gb">This addon provides access to entertainment in various Deccan languages such as Tamil, Telugu, Malayalam, Kannada, and Hindi</description>
+        <disclaimer lang="en_gb">This addon does not host any content and is only a scraper of sites on the Internet that host content. It is not responsible for the accuracy, compliance, copyright, legality, decency, or any other aspect of the content of streamed to your device. If you have any legal issues please contact the appropriate media file owners or host sites</disclaimer>
         <platform>all</platform>
-        <website>https://forums.tvaddons.ag/addon-releases/49105-deccan-delight-indian-entertainment.html</website>
+        <forum>https://forums.tvaddons.ag/addon-releases/49105-deccan-delight-indian-entertainment.html</forum>
+        <website>https://github.com/Gujal00/GujalKodiWork</website>
     </extension>
 </addon>
