@@ -1,3 +1,6 @@
+[B]Version 1.2[/B]
+- Include TVAResolvers
+
 [B]Version 1.1[/B]
 - Move distribution to Offshoregit
 
